--- a/WindowsPhone7Design/StartPage.xaml
+++ b/WindowsPhone7Design/StartPage.xaml
@@ -4,6 +4,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:common="clr-namespace:PhoneCommon.Controls;assembly=PhoneCommon"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
@@ -11,26 +13,30 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="True"
+    shell:SystemTray.Opacity="0">
 
-    <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
-        <!--ContentPanel - place additional content here-->
-        <StackPanel x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <HyperlinkButton Content="Settings" NavigateUri="/Settings/SettingsPage.xaml"/>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="398"/>
+            <ColumnDefinition Width="82"/>
+        </Grid.ColumnDefinitions>
+
+        <ScrollViewer>
+            <toolkit:WrapPanel Margin="16,93,0,93">
+                <common:Tile Title="Settings" NavigateUri="/Settings/SettingsPage.xaml"/>
+                <common:Tile Title="Marketplace" NavigateUri="/Marketplace;component/MainPage.xaml"/>
+                <common:Tile Title="Music+Videos" NavigateUri="/MusicAndVideo;component/MainPage.xaml"/>
+            </toolkit:WrapPanel>
+        </ScrollViewer>
+        
+        <StackPanel Grid.Column="1">
+            <Image Stretch="None" Source="/icons/start.arrownext.rest.png" Margin="15,93,0,0" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left">
+                <Image.RenderTransform>
+                    <ScaleTransform ScaleX="-1"/>
+                </Image.RenderTransform>
+            </Image>
         </StackPanel>
     </Grid>
- 
-    <!--Sample code showing usage of ApplicationBar-->
-    <!--<phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Images/appbar_button1.png" Text="Button 1"/>
-            <shell:ApplicationBarIconButton IconUri="/Images/appbar_button2.png" Text="Button 2"/>
-            <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarMenuItem Text="MenuItem 1"/>
-                <shell:ApplicationBarMenuItem Text="MenuItem 2"/>
-            </shell:ApplicationBar.MenuItems>
-        </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>-->
 
 </phone:PhoneApplicationPage>
